Finally works for mac. Took me five hours